--- a/contactus.html
+++ b/contactus.html
@@ -10,13 +10,104 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* From Uiverse.io by aboalsim114 */
+        .container {
+            display: flex;
+            justify-content: center;
+            /* Center the form horizontally */
+            align-items: center;
+            /* Center the form vertically (if container height is set) */
+            height: 100vh;
+            /* Optional: full viewport height */
+        }
 
+        .form {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 20px;
+            background: linear-gradient(to bottom, #0077be, #3b8df2);
+            border-radius: 10px;
+            overflow: hidden;
+            perspective: 1000px;
+            transform-style: preserve-3d;
+            transform: rotateX(-10deg);
+            transition: all 0.3s ease-in-out;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+            animation: form-animation 0.5s ease-in-out;
+            max-width: 400px;
+            /* Set a max-width for the form */
+            width: 100%;
+            /* Full width within the parent */
+        }
+
+        @keyframes form-animation {
+            from {
+                transform: rotateX(-30deg);
+                opacity: 0;
+            }
+
+            to {
+                transform: rotateX(0deg);
+                opacity: 1;
+            }
+        }
+
+        .input {
+            padding: 10px;
+            border-radius: 5px;
+            background-color: transparent;
+            transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            transform-style: preserve-3d;
+            backface-visibility: hidden;
+            color: rgb(255, 255, 255);
+            border: 2px solid #3b8df2;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        }
+
+        .input::placeholder {
+            color: #fff;
+        }
+
+        .input:hover,
+        .input:focus {
+            border-color: #3b8df2;
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: scale(1.05) rotateY(20deg);
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+            outline: none;
+        }
+
+        button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #3b8df2;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer;
+            transform-style: preserve-3d;
+            backface-visibility: hidden;
+            transform: rotateX(-10deg);
+            transition: all 0.3s ease-in-out;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        }
+
+        button:hover {
+            background-color: #0077be;
+            font-size: 17px;
+            transform: scale(1.05) rotateY(20deg) rotateX(10deg);
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        }
+    </style>
 </head>
 
 <body class="bg-light">
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top bg-info-subtle">
+    <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
         <div class="container-fluid d-flex mx-5 p-1">
             <a class="navbar-brand mx-5 w-25" href="index.html">
                 <img src="images/logo.png" style="height:100px;">
@@ -69,61 +160,56 @@
     </nav>
     <!--Nav bar Ends-->
 
-    <div class="container-xxl mt-2">
+    <div class="container-fluid mt-2">
         <div class="card text-bg-dark">
             <img src="images/slider6.jpg" class="card-img" alt="...">
-            <div class="card-img-overlay margin330">
-                <h5 class="card-title fs-2 mt-5">Contact US</h5>
-                <p class="card-text mt-2">73/A - Vikas Nagar, New Delhi, Delhi, 110059</p>
-            </div>
-        </div>
-    </div>
-    <!--Craousel End -->
-    <div class="container-fluid mt-5">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="mx-5">
-                    <h3 class="header">Oxy Tour & Travels </h3>
-                    <p>73/A - Vikas Nagar, New Delhi, Delhi, 110059
-                    </p>
-                    <p class="mb-1"><a href="tel:+91-931234567"><span><i class="fa fa-phone fa-rotate-90"></i></span>
-                            &nbsp;
-                            +91-123443216</a>,<a href="tel:+91-112234455"> &nbsp; +91-9192939495</a></p>
-                    <p class="mb-1"><a href="mailto:info@oxytours.in"><span><i class="fa fa-envelope"></i></span>
-                            &nbsp;
-                            info@oxytours.in</a></p>
-                    <p class="mb-1"><a href="mailto:https://oxytours.in"><span><i class="fa fa-globe"></i></span>
-                            &nbsp;
-                            oxytours.in</a></p>
-                </div>
-            </div>
-            <div class="col-md-6 m-auto">
-                <div class="form">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Your Name" aria-label="yourname"
-                            aria-describedby="basic-addon1">
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Your Email"
-                            aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <span class="input-group-text" id="basic-addon2">@example.com</span>
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="number" class="form-control" id="contact" placeholder="Your Contact Number"
-                            aria-describedby="basic-addon3">
-                    </div>
-                    <div class="input-group mb-3">
-                        <textarea class="form-control" aria-label="With textarea"></textarea>
-                    </div>
-                    <div class="col-12">
-                        <button class="btn btn-primary" type="submit">Submit</button>
-                    </div>
-                </div>
+            <div class="card-img-overlay d-flex flex-column justify-content-end text-center" style="height: 100%;">
+                <h5 class="card-title fs-2">Contact Us</h5>
+                <p class="card-text">73/A - Vikas Nagar, New Delhi, Delhi, 110059</p>
             </div>
         </div>
     </div>
     
-
+    
+    <!--Craousel End -->
+    <div class="container-fluid mt-5">
+        <div class="row border p-5 m-auto bg-success">
+            <div class="col-md-6 mb-3">
+                <div class="m-auto w-75 h-100 rounded text-center contact-info"
+                    style="background: linear-gradient(to bottom, #8bbe00, #f23b4a);">
+                    <h3 class=" mt-1 header">Oxy Tour & Travels</h3>
+                    <p>73/A - Vikas Nagar, New Delhi, Delhi, 110059</p>
+                    <p class="mb-1">
+                        <a href="tel:+91-931234567">
+                            <span><i class="fa fa-phone fa-rotate-90"></i></span>
+                            &nbsp;+91-123443216
+                        </a>,
+                        <a href="tel:+91-112234455">&nbsp;+91-9192939495</a>
+                    </p>
+                    <p class="mb-1">
+                        <a href="mailto:info@oxytours.in">
+                            <span><i class="fa fa-envelope"></i></span>
+                            &nbsp;info@oxytours.in
+                        </a>
+                    </p>
+                    <p class="mb-1">
+                        <a href="https://oxytours.in">
+                            <span><i class="fa fa-globe"></i></span>
+                            &nbsp;oxytours.in
+                        </a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-6 m-auto">
+                <form class="form text-center">
+                    <input placeholder="Enter your name" class="input" type="text">
+                    <input placeholder="Enter your email" class="input" type="text">
+                    <input placeholder="Enter your Mobile Number" class="input" type="number">
+                    <button class="btn">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer Starts-->
     <footer id="footerwebs">
