--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg-light">
 
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top bg-info-subtle">
+  <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
     <div class="container-fluid d-flex mx-5 p-1">
       <a class="navbar-brand mx-5 w-25" href="index.html">
         <img src="images/logo.png" style="height:100px;">
