--- a/domestictour.html
+++ b/domestictour.html
@@ -167,7 +167,7 @@
     <!--Carousel-->
     <div class="container-fluid w-75 mt-4">
         <div class="card text-bg-dark">
-            <img src="images/dom.webp" class="card-img img-fluid" alt="Domestic Tour">
+            <img src="images/dom.webp" class="img-fluid" alt="Domestic Tour">
             <div class="card-img-overlay d-flex flex-column justify-content-end align-items-center">
                 <h2 class="card-title text-light text-center">Explore Our Domestic Tours</h2>
                 <p class="card-text text-light text-center">Experience the beauty of India with our curated domestic
