--- a/internationaltour.html
+++ b/internationaltour.html
@@ -138,7 +138,7 @@
     <!--Carousel-->
     <div class="container-fluid w-75 mt-4">
         <div class="card text-bg-dark">
-            <img src="images/internatinal-banner.png" class="card-img img-fluid" alt="Slider">
+            <img src="images/internatinal-banner.png" class="img-fluid" alt="Slider">
             <div class="card-img-overlay d-flex flex-column justify-content-end align-items-center">
                 <h2 class="card-title text-light text-center">Explore Our International Tours</h2>
                 <p class="card-text text-light text-center">Embark on unforgettable journeys across the globe. Choose
