--- a/domestictour.html
+++ b/domestictour.html
@@ -165,7 +165,7 @@
     <!--Navbar Ends-->
 
     <!--Carousel-->
-    <div class="container-fluid w-75 mt-4">
+    <div class="container-fluid mt-4">
         <div class="card text-bg-dark">
             <img src="images/dom.webp" class="img-fluid" alt="Domestic Tour">
             <div class="card-img-overlay d-flex flex-column justify-content-end align-items-center">
