--- a/domestictour.html
+++ b/domestictour.html
@@ -179,7 +179,7 @@
 
     <!--Craousel End -->
     <!--Ayodhya Tour-->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row rounded toubg bg-white mt-4 border border-success">
             <h1>Ayodhya Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 01 Nights / 02 Days </span> </h5>
