--- a/domestictour.html
+++ b/domestictour.html
@@ -179,10 +179,11 @@
 
     <!--Craousel End -->
     <!--Ayodhya Tour-->
-    <div class="container-fluid">
-        <div class="row rounded toubg bg-white mt-4 border border-success">
+    <div class="container-fluid mt-4">
+        <div class="row rounded toubg text-center bg-white m-auto border border-success">
             <h1>Ayodhya Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 01 Nights / 02 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="ayodhya-tour">
                 <img src="images/ayodhya-tour.jpg" alt="Ayodhya Tour" class="img-fluid mt-1 mb-1">
             </div>
@@ -352,10 +353,11 @@
             </div>
         </div>
         <!--Rajasthan Tour -->
-        <div class="row rounded toubg bg-white mt-4 border border-success">
+        <div class="row rounded toubg text-center bg-white mt-4 m-auto border border-success">
             <h1>Rajasthan Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 07 Nights / 08 Days </span> </h5>
-            <div class="col-xl-5 d-flex justify-content-center" id="rajasthan-tour">
+            <hr class="my-4 border-dark border-top border-3">
+            <div class="col-md-5 d-flex justify-content-center" id="rajasthan-tour">
                 <img src="images/rajasthan-tour.png" alt="Rajasthan Tour" class="img-fluid mt-1 mb-1">
             </div>
             <div class="col-xl-7 py-3">
@@ -525,9 +527,10 @@
         </div>
 
         <!--Kashmir Tour-->
-        <div class="row toubg rounded bg-white mt-4 border border-success">
+        <div class="row toubg rounded bg-white text-center mt-4 m-auto border border-success">
             <h1> Kashmir Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 06 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="kashmir-tour">
                 <img src="images/kashmir-tour.jpg" alt="Kashmir Tour" class="img-fluid mt-1 mb-1">
             </div>
@@ -703,9 +706,10 @@
         </div>
 
         <!--Goa Tour-->
-        <div class="row toubg rounded bg-white border border-success mt-4">
+        <div class="row toubg rounded bg-white border border-success m-auto text-center mt-4">
             <h1>Goa Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 03 Nights / 04 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="goa-tour">
                 <img src="images/goa-tour.jpg" alt="Goa Tour" class="img-fluid mt-1 mb-1">
             </div>
@@ -885,9 +889,10 @@
         </div>
 
         <!--Kerela Tour-->
-        <div class="row toubg rounded bg-white border border-success mt-4">
+        <div class="row toubg rounded bg-white border border-success mt-4 m-auto text-center">
             <h1> Kerela Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="kerela-tour">
                 <img src="images/kerala-tour.jpg" alt="Kerela Tour" class="img-fluid mt-1 mb-1">
             </div>
@@ -1067,9 +1072,10 @@
         </div>
 
         <!--North-East Tour-->
-        <div class="row toubg rounded bg-white border border-success mt-4">
+        <div class="row toubg rounded bg-white border border-success mt-4 m-auto text-center">
             <h1>North-East Tour Package</h1>
             <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="north-east-tour">
                 <img src="images/north-east-tour.jpg" alt="North-East Tour" class="img-fluid mt-1 mb-1">
             </div>
