--- a/index.html
+++ b/index.html
@@ -121,17 +121,18 @@
         <h2 align="center" class="text-info m-2" style="font-family: 'Montserrat', sans-serif; font-size: 2.5rem;">NOW
           WE ARE GLOBALLY EVERYWHERE</h2>
         <h3 align="center" class="text-danger m-2" style="font-family: 'Raleway', sans-serif; font-size: 2rem;">Welcome
-          To Travel Angels</h3>
+          To Oxy Tours </h3>
         <p align="center" class="text-dark mt-4"
           style="font-family: 'Open Sans', sans-serif; font-size: 1.2rem; line-height: 1.6;">
-          OXY TOUR AND TRAVELS is a massive platform for tour packages and travel offers. We use revolutionary
+          <b> OXY TOURS</b> is a massive platform for tour packages and travel offers. We use revolutionary
           technologies to make it fast and convenient to find the best deal on your packages. Our wide variety of
           partners, fantastic offers and travel content can make us a natural starting point for your travel packages.
           We assist you in finding and evaluating the best packages rates from dozens of ticket reservation deals,
           brokers, and travel providers.
 
-          If you already know where and when you want to go, or can be a little creative and encouraging, OXY TOUR AND
-          TRAVELS is the ideal place to browse for and schedule the right journey.
+          If you already know where and when you want to go, or can be a little creative and encouraging, <b> Oxy
+            Tours</b> is
+          the ideal place to browse for and schedule the right journey.
 
           Our ambition and dream of achieving simplicity has led to much fruitful incubation, and fresh innovations are
           placing us in a league well ahead of our rivals. We are disruptive in our approach to destroying or generating
@@ -354,7 +355,7 @@
   <footer id="footerwebs">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-5 p-r-5">
+        <div class="col-lg-5 p-5">
           <p class="mx-5">
             <img src="images/logo.png" alt="OXY TOUR AND TRAVELS" width="140" height="100">
           </p>
@@ -371,7 +372,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 ml-lg-auto">
+        <div class="col-lg-4 p-5">
           <h5 class="text-warning">Useful links</h5>
           <ul class="links">
             <li><a href="index.html">Home</a></li>
@@ -383,8 +384,7 @@
             <li><a href="#footerwebs">Privacy</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 col-md-6">
-
+        <div class="col-lg-3 p-5">
           <h5 class="text-warning">Contact with Us</h5>
           <ul class="contacts">
             <li><a href="tel:+91-8448740282"><i class="fa fa-phone"></i> +91-93181234, +91-963198765</a></li>
