--- a/contactus.html
+++ b/contactus.html
@@ -169,15 +169,15 @@
             </div>
         </div>
     </div>
-    
-    
+
+
     <!--Craousel End -->
     <div class="container-fluid mt-5">
-        <div class="row border p-5 m-auto bg-success">
+        <div class="row border border-dark p-5 m-auto bg-success">
             <div class="col-md-6 mb-3">
-                <div class="m-auto w-75 h-100 rounded text-center contact-info"
+                <div class="m-auto w-75 h-100 p-3 rounded text-center"
                     style="background: linear-gradient(to bottom, #8bbe00, #f23b4a);">
-                    <h3 class=" mt-1 header">Oxy Tour & Travels</h3>
+                    <h3 class="mt-3 header">Oxy Tour & Travels</h3>
                     <p>73/A - Vikas Nagar, New Delhi, Delhi, 110059</p>
                     <p class="mb-1">
                         <a href="tel:+91-931234567">
@@ -213,7 +213,7 @@
 
     <!-- Footer Starts-->
     <footer id="footerwebs">
-        <div class="container-fluid margin_60_35">
+        <div class="container-fluid border margin_60_35">
             <div class="row">
                 <div class="col-lg-4 p-r-5">
                     <p class="mx-5">
@@ -227,8 +227,8 @@
                     <div class="follow_us mx-5">
                         <ul>
                             <li class="text-warning">Follow us</li>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></i></a></li>
-                            <li><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li> <a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                         </ul>
                     </div>
@@ -259,15 +259,21 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-lg-12 m-auto">
-                    <ul id="additional_links">
-                        <li class="m-auto d-block"><span>© 2024 OXY TOUR & TRAVELS</span></li>
-                    </ul>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <ul id="additional_links" class="list-unstyled d-flex justify-content-center">
+                            <li class="mx-3" style="font-family: 'Poppins', sans-serif; font-size: 1.2rem;"><span>All
+                                    rights Reserved</span></li>
+                            <li class="mx-3" style="font-family: 'Poppins', sans-serif; font-size: 1.2rem;"><span>© 2024
+                                    OXY TOUR & TRAVELS</span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
     <!--Footer End-->
+
     <script>
         items.forEach((el) => {
             const minPerSlide = 4
