--- a/domestictour.html
+++ b/domestictour.html
@@ -68,22 +68,6 @@
             background-color: #f9f9f9;
         }
 
-        .navbar {
-            background-color: #007BFF;
-        }
-
-        .navbar-brand img {
-            height: 80px;
-        }
-
-        .nav-link {
-            color: #fff !important;
-        }
-
-        .nav-link:hover {
-            color: #FFD700 !important;
-        }
-
         .card {
             border: none;
         }
@@ -111,28 +95,28 @@
 </head>
 
 <body class="bg-light">
-    <!--Navbar-->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
         <div class="container-fluid d-flex mx-5 p-1">
-            <a class="navbar-brand mx-5" href="index.html">
-                <img src="images/logo.png" alt="Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse mx-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link mx-4" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-4" href="#abtus">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-4" href="contactus.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item mx-4 dropdown">
+          <a class="navbar-brand mx-5 w-25" href="index.html">
+            <img src="images/logo.png" style="height:100px;">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse mx-5" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active mx-4" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-4" href="#abtus">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-4" aria-current="page" href="contactus.html">Contact Us</a>
+              </li>
+              <li class="nav-item mx-4 dropdown">
                         <a class="nav-link active dropdown-toggle" href="domestictour.html" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> Domestic Tour
                         </a>
@@ -162,7 +146,8 @@
             </div>
         </div>
     </nav>
-    <!--Navbar Ends-->
+    <!-- Navbar Ends -->
+
 
     <!--Carousel-->
     <div class="container-fluid mt-4">
@@ -1251,8 +1236,6 @@
             </div>
         </div>
     </div>
-    </div>
-
 
     <!-- Footer Starts-->
     <footer id="footerwebs">
