--- a/internationaltour.html
+++ b/internationaltour.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tour and Travels/ International Tours</title>
+    <title>Tour and Travels/ Domestic Tours</title>
     <link rel="stylesheet" href="css/tour&travels.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,104 +63,113 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
-        .navbar-nav .nav-link {
-            font-family: 'Poppins', sans-serif;
-            font-size: 1.2rem;
-            /* Increase the font size */
+        .card {
+            border: none;
         }
 
-        .dropdown-menu .dropdown-item {
-            font-family: 'Poppins', sans-serif;
-            font-size: 1rem;
-            /* Font size for dropdown items */
+        .card-img-overlay {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+        }
+
+        .tour-title {
+            font-family: 'Montserrat', sans-serif;
+            color: #007BFF;
+            margin-top: 20px;
+            font-weight: 700;
+        }
+
+        h2 {
+            color: #333;
         }
     </style>
 </head>
 
 <body class="bg-light">
-
-    <!--Navbar-->
+    <!--NaveBar-->
     <nav class="navbar navbar-expand-lg navbar-inverse navbar-fixed-top">
-        <div class="container-fluid d-flex mx-5 p-1">
-            <a class="navbar-brand mx-5 w-25" href="index.html">
-                <img src="images/logo.png" style="height:100px;">
+    <div class="container-fluid d-flex mx-5 p-1">
+      <a class="navbar-brand mx-5 w-25" href="index.html">
+        <img src="images/logo.png" style="height:100px;">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse mx-5" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active mx-4" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-4" href="#abtus">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-4" aria-current="page" href="contactus.html">Contact Us</a>
+          </li>
+          <li class="nav-item mx-4 dropdown">
+            <a class="nav-link dropdown-toggle" href="domestictour.html" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false"> Domestic Tour
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse mx-5" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link mx-4" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-4"
-                            href="file:///C:/Users/abhij/OneDrive/Desktop/tt/index.html#abtus">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-4" aria-current="page" href="contactus.html">Contact Us</a>
-                    </li>
-                    <li class="nav-item mx-4 dropdown">
-                        <a class="nav-link dropdown-toggle" href="domestictour.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false"> Domestic Tour
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="domestictour.html">Ayodhya Tour</a></li>
-                            <li><a class="dropdown-item" href="domestictour.html">Rajasthan Tour</a></li>
-                            <li><a class="dropdown-item" href="domestictour.html">Kashmir Tour</a></li>
-                            <li><a class="dropdown-item" href="domestictour.html">Goa Tour</a></li>
-                            <li><a class="dropdown-item" href="domestictour.html">Kerala Tour</a></li>
-                            <li><a class="dropdown-item" href="domestictour.html">North-East Tour</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item mx-4 dropdown">
-                        <a class="nav-link active dropdown-toggle" href="internationaltour.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">International Tour
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#dubai-tour">Dubai Tour</a></li>
-                            <li><a class="dropdown-item" href="#nepal-tour">Nepal Tour</a></li>
-                            <li><a class="dropdown-item" href="#malaysia-tour">Malaysia Tour</a></li>
-                            <li><a class="dropdown-item" href="#singapore-tour">Singapore Tour</a></li>
-                            <li><a class="dropdown-item" href="#srilanka-tour">Srilanka Tour</a></li>
-                            <li><a class="dropdown-item" href="#thailand-tour">Thailand Tour</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--Nav bar Ends-->
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="domestictour.html">Ayodhya Tour</a></li>
+              <li><a class="dropdown-item" href="domestictour.html">Rajasthan Tour</a></li>
+              <li><a class="dropdown-item" href="domestictour.html">Kashmir Tour</a></li>
+              <li><a class="dropdown-item" href="domestictour.html">Goa Tour</a></li>
+              <li><a class="dropdown-item" href="domestictour.html">Kerala Tour</a></li>
+              <li><a class="dropdown-item" href="domestictour.html">North-East Tour</a></li>
+            </ul>
+          </li>
+          <li class="nav-item mx-4 dropdown">
+            <a class="nav-link dropdown-toggle" href="internationaltour.html" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">International Tour
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="internationaltour.html">Dubai Tour</a></li>
+              <li><a class="dropdown-item" href="internationaltour.html">Nepal Tour</a></li>
+              <li><a class="dropdown-item" href="internationaltour.html">Malaysia Tour</a></li>
+              <li><a class="dropdown-item" href="internationaltour.html">Singapore Tour</a></li>
+              <li><a class="dropdown-item" href="internationaltour.html">Srilanka Tour</a></li>
+              <li><a class="dropdown-item" href="internationaltour.html">Thailand Tour</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--Nav bar Ends-->
 
     <!--Carousel-->
-    <div class="container-fluid w-75 mt-4">
+    <div class="container-fluid mt-4">
         <div class="card text-bg-dark">
-            <img src="images/internatinal-banner.png" class="img-fluid" alt="Slider">
+            <img src="images/internatinal-banner.png" class="img-fluid rounded border border-dark" alt="Slider">
             <div class="card-img-overlay d-flex flex-column justify-content-end align-items-center">
                 <h2 class="card-title text-light text-center">Explore Our International Tours</h2>
                 <p class="card-text text-light text-center">Embark on unforgettable journeys across the globe. Choose
                     your dream destination!</p>
             </div>
         </div>
+    </div>
     <!--Carousel End -->
 
     <!--Dubai Tour-->
-    <div class="container-fluid">
-        <div class="row rounded toubg border border-success mt-4">
-            <div class="col-md-5 d-flex justify-content-center rounded" id="dubai-tour">
+    <div class="container-fluid mt-4">
+        <div class="row rounded toubg text-center bg-white m-auto border border-success">
+            <h1>Dubai Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
+            <div class="col-md-5 d-flex justify-content-center" id="dubai-tour">
                 <img src="images/dubai-tour.jpg" alt="Dubai Tour" class="img-fluid">
             </div>
             <div class="col-md-7 py-3">
-                <h1>Dubai Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
                 <div class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold"> Day 1: </li>
                         <li class="list-group-item text-success"> Arrival at Dubai airport, and proceed for Dhow
                             Cruise </li>
                         <li class="list-group-item text-danger fw-bold"> Day 2: </li>
-                        <li class="list-group-item text-success"> Jumeirah Mosque, Dubai Museum, Textile Market &k </li>
+                        <li class="list-group-item text-success"> Jumeirah Mosque, Dubai Museum, Textile Market &k
+                        </li>
                         <li class="list-group-item text-danger fw-bold"> Day 3: </li>
                         <li class="list-group-item text-success"> Rest of the day free to explore Dubai on your own
                         </li>
@@ -328,13 +335,14 @@
             </div>
         </div>
         <!--Nepal Tour -->
-        <div class="row rounded toubg border border-success mt-4">
+        <div class="row rounded toubg border border-success mt-4 m-auto text-center">
+            <h1>Nepal Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="nepal-tour">
                 <img src="images/nepal-tour.jpg" alt="Dubai Tour" class="img-fluid mt-1 mb-1">
             </div>
             <div class="col-md-7 py-3">
-                <h1>Nepal Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
                 <div class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold"> <b> Day 1 :</b> </li>
@@ -346,7 +354,8 @@
                         <li class="list-group-item text-danger fw-bold"> <b> Day 4 : </b> </li>
                         <li class="list-group-item text-success">Pokhara Sightseeing. </li>
                         <li class="list-group-item text-danger fw-bold"> <b> Day 5 : </b> </li>
-                        <li class="list-group-item text-success">Jomsom Kathmandu Via Pokhara ( AIR + Surface ) </li>
+                        <li class="list-group-item text-success">Jomsom Kathmandu Via Pokhara ( AIR + Surface )
+                        </li>
                     </ul>
                 </div>
                 <div class="row mt-4">
@@ -504,13 +513,14 @@
         </div>
 
         <!--Malaysia Tour-->
-        <div class="row rounded toubg border border-success mt-4">
+        <div class="row rounded toubg border border-success mt-4 m-auto text-center">
+            <h1> Malaysia Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 06 Nights / 07 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center rounded" id="malaysia-tour">
                 <img src="images/malaysia-tour.jpg" alt="Malaysia Tour" class="img-fluid mt-1 mb-1">
             </div>
             <div class="col-md-7 py-3">
-                <h1> Malaysia Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 06 Nights / 07 Days </span> </h5>
                 <div class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold"> <b> Day 1 :</b> </li>
@@ -681,13 +691,14 @@
         </div>
 
         <!--Singapore Tour-->
-        <div class="row rounded toubg border border-success mt-4">
+        <div class="row rounded toubg border border-success mt-4 m-auto text-center">
+            <h1>Singapore Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="singapore-tour">
                 <img src="images/singapore-tour.jpg" alt="Dubai Tour" class="img-fluid mt-1 mb-1">
             </div>
             <div class="col-md-7 py-3">
-                <h1>Singapore Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
                 <div class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold"> <b> Day 1 :</b> </li>
@@ -857,13 +868,14 @@
         </div>
 
         <!--Sri Lanlka Tour-->
-        <div class="row rounded toubg border border-success mt-4">
+        <div class="row rounded toubg border border-success mt-4 m-auto text-center">
+            <h1> Srilanka Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="sri-lanka-tour">
                 <img src="images/sri-lanka-tour.jpg" alt="Dubai Tour" class="img-fluid mb-1 mt-1">
             </div>
             <div class="col-md-7 py-3">
-                <h1> Srilanka Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
                 <section class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold">Day 1:</li>
@@ -1037,13 +1049,14 @@
         </div>
 
         <!--Thailand Tour-->
-        <div class="row rounded toubg bg-white border border-success mt-4">
+        <div class="row rounded toubg bg-white border border-success mt-4 m-auto text-center">
+            <h1>Thailand Tour Package</h1>
+            <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
+            <hr class="my-4 border-dark border-top border-3">
             <div class="col-md-5 d-flex justify-content-center" id="thailand-tour">
                 <img src="images/thailand-tour.jpg" alt="Thailand Tour" class="img-fluid mt-1 mb-1">
             </div>
             <div class="col-md-7 py-3">
-                <h1>Thailand Tour Package</h1>
-                <h5 class="text-black-50"> <span class="mx-3"> 04 Nights / 05 Days </span> </h5>
                 <section class="tour">
                     <ul class="list-group">
                         <li class="list-group-item text-danger fw-bold">Day 1:</li>
